--- a/stockEngine/requirements.txt
+++ b/stockEngine/requirements.txt
@@ -15,13 +15,21 @@ django-webpack-loader==0.6.0
 djangorestframework==3.11.0
 gunicorn==19.9.0
 idna==2.8
+lxml==4.6.2
+multitasking==0.0.9
+numpy==1.20.1
 oauthlib==3.1.0
+pandas==1.2.2
 PyMySQL==1.0.2
+python-dateutil==2.8.1
 python3-openid==3.1.0
 pytz==2019.3
 requests==2.22.0
 requests-oauthlib==1.3.0
 six==1.14.0
+soupsieve==2.2
 sqlparse==0.3.0
+static3==0.7.0
 urllib3==1.25.8
 whitenoise==5.2.0
+yfinance==0.1.55
